        PR middle-end/24612         * omp-low.c (expand_rec_input_clauses): Set TREE_NO_WARNING for         pass-by-value shared variables.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gomp-20050608-branch@106551 138bc75d-0d04-0410-961f-82ee72b054a4